# Verification

./: CMakeLists.txt  README.md  main.cpp
Algorithm/: MyAlgo.h  MyAlgo_robot_mem.h  alpha.h  alpha_robot_mem.h  scan.h  scan_robot_mem.h
Algorithm/xX/: MyAlgo.h  MyAlgo_Weighted.h
Heder_files/: CGAL_TypeDefinition.h  Disk_obj.h  Exception_.h  Movement_Direction.h  Rect_Obstacle.h  Segment_obj.h  State_data.h  lts.h  robots_status.h  sequence.h  state_space.h
Lib/: Arrangement.cpp  Arrangement.h  CMakeLists.txt  Environment.cpp  Environment.h  Event.cpp  Event.h  M_Utility.cpp  M_Utility.h  Robot.cpp  Robot.h  dispatch.cpp  dispatch.h
